Updates to the draft of the overview paper

--- a/latex/acousticbrainz-genre-task-me17.bib
+++ b/latex/acousticbrainz-genre-task-me17.bib
@@ -38,4 +38,11 @@
   year={2009},
 }
 
+@article{sturm2013classification,
+  title={Classification accuracy is not enough: On the evaluation of music genre recognition systems},
+  author={Sturm, Bob L},
+  journal={Journal of Intelligent Information Systems},
+  year={2013}
+}
+
 
