--- a/latex/acousticbrainz-genre-task-me17.tex
+++ b/latex/acousticbrainz-genre-task-me17.tex
@@ -111,9 +111,8 @@ annotations from multiple sources and large-scale music features data available
 in the AcousticBrainz database. The goal of our task is to explore how the same
 music pieces can be annotated differently by different communities following
 different genre taxonomies, and how this should be addressed by content-based
-genre recognition systems. We present the task challenges, the employed dataset
-and ground-truth information, the required runs, and the considered evaluation
-metrics.
+genre recognition systems. We present the task challenges, the employed 
+ground-truth information and datasets, and the evaluation methodology.
 
 \end{abstract}
 
@@ -169,17 +168,18 @@ metrics.
 \section{Introduction}  Content-based music genre recognition is a popular task
 within the Music Information Retrieval (MIR)
 community~\cite{sturm2013classification}. The goal is to build systems that are
-able to predict genre and subgenre of unknown music recordings (songs, tracks)
+able to predict genre and subgenre of unknown music recordings (tracks or songs)
 using music features of those recordings automatically computed from audio.
-Achieving success in the task therefore relies on building efficient machine
-learning and audio signal processing algorithms.
-
+%Achieving success in the task therefore relies on building efficient machine
+%learning and audio signal processing algorithms.
 \hl{Although this task is commonly addressed in the MIR research, we realize that it
 is often oversimplified while it should be considered in more complexity
-resembling real-world use cases.} In particular, such research can be supported
+resembling real-world use cases.} 
+%In particular, 
+Such research can be supported
 by our recent developments in the context of the
 AcousticBrainz\footnote{\url{https://acousticbrainz.org}} project facilitating
-access to larger datasets of music features~\cite{porter2015acousticbrainz} and
+access to large datasets of music features~\cite{porter2015acousticbrainz} and
 metadata~\cite{porter2016mining}. AcousticBrainz is a community database
 containing MIR features extracted from audio files. Users who contribute to the
 project run software on their computers to analyze their personal audio
@@ -203,7 +203,8 @@ In contrast, we propose to consider more specific genres and subgenres and our
 data contains hundreds of subgenres.
 
 \item Genre recognition is often treated as a single category classification
-problem, which is not necessarily the way it should be. Our genre data is
+problem. %, which is not necessarily the way it should be. O
+Our genre data is
 intrinsically multi-label and so we propose to treat genre recognition as a
 multi-label classification problem.
 
@@ -225,27 +226,27 @@ this knowledge.
 
 \section{Task Description} 
 
-This task invites participants to predict genre and subgenre of unknown music
-recordings (tracks) given automatically computed features of those recordings. We
-provide a training set of such audio features taken from the AcousticBrainz
+The task invites participants to predict genre and subgenre of unknown music
+recordings (tracks) given automatically computed features of those recordings.
+We provide a training set of such music features taken from the AcousticBrainz
 database~\cite{porter2015acousticbrainz} together with four different ground
-truths of genre and subgenre labels. These genre datasets were created using as
-a source four different music metadata websites. Their genre taxonomies vary in
+truths of genre and subgenre labels. These ground truths were created using as a
+source four different music metadata websites. Their genre taxonomies vary in
 class spaces, specificity and breadth. Each source has its own definition for
 its genre labels meaning that these labels may be different between sources.
+Importantly, annotations in each source are multi-label: there may be multiple genre and
+subgenre annotations for the same music recording. It is guaranteed that each
+recording has at least one genre label, while subgenres are not always present.
+
+
 Participants must train model(s) using this data and then generate predictions
-of genre and subgenre labels for a test set.
-
-We provide a dataset (a development and test set) for every genre ground truth.
-In total, participants are given four development datasets and all proposed
-models are evaluated on four test datasets. The goal is to create a system that
-uses provided music features as an input and predicts genre and subgenre labels,
-following genre taxonomy of each ground truth. Importantly, annotations in the
-datasets are multi-label. There may be multiple genre and subgenre annotations
-for the same music recording. It is guaranteed that each recording has at least
-one genre label, while subgenres are not always present.
-
-The task includes two subtasks:
+of genre and subgenre labels for a test set
+%We provide a dataset (a development and test set) for every genre ground truth.
+%In total, participants are given four development datasets and all proposed
+%models are evaluated on four test datasets. 
+%The goal is to create a system that
+%uses provided music features as an input and predicts genre and subgenre labels,
+following genre taxonomy of each ground truth. The task includes two subtasks:
 
 \begin{itemize}
 
@@ -284,6 +285,14 @@ how to combine the training data from all sources.
 
 We provide four datasets containing genre and subgenre annotations extracted
 from four different online metadata sources:
+\footnote{
+The resulting genre metadata is licensed under CC BY-NC-SA4.0
+license, except
+for data extracted from the AllMusic database which is released for 
+non-commercial scientific research purposes only. Any publication of results based
+on the data extracts of the AllMusic database must cite AllMusic as the source
+of the data.
+}  
 
 \begin{itemize}
 
@@ -292,25 +301,26 @@ from four different online metadata sources:
 \item \textbf{Lastfm}\footnote{\url{https://last.fm}} and \textbf{Tagtraum}\footnote{\url{https://tagtraum.com}} are based on collaborative music tagging platforms with large amounts of genre labels provided by their users for music recordings (tracks). We have automatically inferred a genre/subgenre taxonomy and annotations from these labels following the algorithm proposed in~\cite{schreiber_improving_2015} and a manual post-processing.
 
 \end{itemize}
-
 We provide information about genre/subgenre tree hierarchies for every ground
-truth. The resulting genre metadata is licensed under CC BY-NC-SA4.0
-license,\footnote{ %Creative Commons Attribution-NonCommercial-ShareAlike 4.0
-International, \url{https://creativecommons.org/licenses/by-nc-sa/4.0/}} except
-for data extracted from the AllMusic database which is released for non-
-commercial scientific research purposes only. Any publication of results based
-on the data extracts of the AllMusic database must cite AllMusic as the source
-of the data.
+truth. 
+%The resulting genre metadata is licensed under CC BY-NC-SA4.0
+%license,\footnote{ %Creative Commons Attribution-NonCommercial-ShareAlike 4.0
+%International, \url{https://creativecommons.org/licenses/by-nc-sa/4.0/}} except
+%for data extracted from the AllMusic database which is released for non-
+%commercial scientific research purposes only. Any publication of results based
+%on the data extracts of the AllMusic database must cite AllMusic as the source
+%of the data.
 
 
 \subsection{Music Features} 
 
 We provide music features precomputed from audio for every music recording. All
-features are taken from the community-built database AcousticBrainz and were
+features are taken from the AcousticBrainz database and were
 extracted from audio using Essentia, an open-source library for music audio
-analysis~\cite{bogdanov2013essentia}. They are grouped into categories (low-
-level, rhythm, and tonal) and are explained online.\footnote{\url{http://essenti
-a.upf.edu/documentation/streaming_extractor_music.html}} Only statistical
+analysis~\cite{bogdanov2013essentia}. The provided features 
+%are grouped into categories (low-level, rhythm, and tonal) and 
+are explained online.
+\footnote{\url{http://essentia.upf.edu/documentation/streaming_extractor_music.html}} Only statistical
 characterization of time frames is provided (bag of features), that is, no
 frame-level data is available.
 
@@ -318,36 +328,41 @@ frame-level data is available.
 
 In total we provide four development and four test datasets associated with the
 four genre ground truths. They were created by a random split of 
-original full datasets ensuring that:
+the full data ensuring that:
 \begin{itemize}
 \item no recordings from test sets are also present in any of the development sets;
-\item no recordings from test sets are from the same release groups as the development sets; 
+\item no recordings from test sets are from the same release groups (e.g., albums, singles, EPs) as the development sets; 
 \item the same genre and subgenre labels are present in both development and test sets for each ground truth;
 \item genre and subgenre labels are represented by at least 40 and 20 recordings from 6 and 3 release groups in development and test sets, respectively.
 \end{itemize}
 The approximate split ratio is 70\% to 15\% of the total number of recordings
-(another 15\% are reserved for further evaluation purposes).
+(another 15\% were reserved for further evaluation purposes).
 Table~\ref{table:train_stats} provides an overview of the resulting development
-datasets. Genre/subgenre taxonomy and distribution in terms of number of recordings and
-release groups for all four development datasets are reported
-online.\footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-
-Genre-Task/data_stats/}} Recordings are partially intersected in all four
+sets. Genre/subgenre taxonomy and their distribution in the development sets in terms of number of recordings and
+release groups %for all four development sets 
+are reported online.\footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-Genre-Task/data_stats/}} 
+Recordings are partially intersected in all four
 development sets as well as in the test sets. The full intersection of all
-development sets contains 247716 recordings while the intersection of the two
-largest development sets, AllMusic and Discogs, contains 831744 recordings.
+development sets (recordings annotated by all four ground truths) contains 247716 recordings while the intersection of the two
+largest %development 
+sets, AllMusic and Discogs, contains 831744 recordings.
 
-
-Further details on the format of all distributed data are available
-online.\footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-
-Genre-Task/data/}} Each recording (a track or song) in the datasets is
-identified with a recording MusicBrainz identifier
-(MBID).\footnote{\url{https://musicbrainz.org/doc/MusicBrainz_Identifier}} All
-identifiers in the test datasets are anonymized for evaluation purposes.
+The details on the format of all distributed data are available
+online.\footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-Genre-Task/data/}} 
+Each recording (a track or song) in the development sets is
+identified with a %recording 
+MusicBrainz identifier (MBID).\footnote{\url{https://musicbrainz.org/doc/MusicBrainz_Identifier}} 
+%All identifiers in the test datasets are anonymized for evaluation purposes.
 Importantly, our split allows to avoid the ``album
 effect''~\cite{flexer2009album} which consists in a potential overestimation of
-the performance of a classifier when a test set contains music recordings from
-the same albums as the training set. The development datasets additionally
-include information about release groups of each recording (release group MBID)
+the performance of a system when a test set contains recordings from
+the same albums as the training set. 
+%For this reason we also included information
+%about release groups of each recording in the development sets to help participants
+%to avoid this effect when developing their systems.
+The development sets additionally
+include information about release groups of each recording 
+%(release group MBID)
 which may be useful for participants in order to avoid this effect when
 developing their systems.
 
@@ -382,7 +397,7 @@ developing their systems.
 \end{tabular}
 \end{table}
 
-\section{Submissions}
+\section{Submissions and Evaluation}
 
 Participants are expected to submit predictions for both subtasks. If they only
 want to work on the first subtask, they should submit the same predictions for
@@ -390,7 +405,7 @@ the second subtask. We allow only five evaluation runs (each run includes both
 subtasks). Participants should report whether they used the whole development
 dataset or only its part for every submission.
 
-\section{Evaluation Methodology}
+%\section{Evaluation Methodology}
 
 The evaluation is carried out for each dataset separately. In particular, we
 compute precision, recall and F-score as follows:
@@ -408,9 +423,9 @@ The ground truth does not necessarily contain subgenre annotations for some
 recordings. Therefore, only recordings containing subgenres are considered for
 the evaluation on the subgenre level. An example can be found online in the
 summaries of random
-baselines.\footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-
-Genre-Task/baseline/}} We provide evaluation scripts for
-development purposes.\footnote{Accessible to registered participants.}
+baselines.
+\footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-Genre-Task/baseline/}} 
+We provide evaluation scripts for development purposes.\footnote{Accessible to registered participants.}
 
 \section{Conclusions}
 Bringing the AcousticBrainz Genre Task to MediaEval we hope to benefit from
