Small fixes to shorten the text

--- a/latex/acousticbrainz-genre-task-me17.tex
+++ b/latex/acousticbrainz-genre-task-me17.tex
@@ -208,16 +208,18 @@ Our genre data is
 intrinsically multi-label. Therefore we propose to treat genre recognition as a
 multi-label classification problem.
 
-\item Oftentimes research is done on small music collections. Instead, we
+\item Often research is done on small music collections. Instead, we
 provide a very large dataset counting two million recordings annotated with genres
 and subgenres. The downside is that we are not able to provide audio, but only
-precomputed bags of features.
+precomputed %bags of 
+features.
 
 \item Finally, we provide information about the hierarchy of genres and
 subgenres within each genre annotation source. Systems can take advantage of
 this knowledge.
 
 \end{itemize} 
+
 
 %Bringing the AcousticBrainz Genre Task to MediaEval, our goal is to benefit from
 %contributions and expertise of a broader machine learning and multimedia
