general review to overview paper.

--- a/latex/acousticbrainz-genre-task-me17.bib
+++ b/latex/acousticbrainz-genre-task-me17.bib
@@ -44,5 +44,43 @@
   journal={Journal of Intelligent Information Systems},
   year={2013}
 }
+@article{Sturm2014state,
+author = {Sturm, Bob L.},
+journal = {Journal of New Music Research},
+number = {2},
+pages = {147--172},
+title = {{The State of the Art Ten Years After a State of the Art: Future Research in Music Information Retrieval}},
+volume = {43},
+year = {2014}
+}
 
-
+@misc{acousticbrainz,
+  url = {https://acousticbrainz.org},
+  author = {Acousticbrainz},
+  year = {2017}
+}
+@misc{allmusic,
+	url = {https://allmusic.com},
+	author = {AllMusic},
+	year = {2017}
+}
+@misc{discogs,
+	url = {https://discogs.com},
+	author = {Discogs},
+	year = {2017}
+}
+@misc{lastfm,
+	url = {https://last.fm},
+	author = {Lastfm},
+	year = {2017}
+}
+@misc{tagtraum,
+	url = {http://www.tagtraum.com},
+	author = {Tagtraum},
+	year = {2017}
+}
+@mis{beatunes,
+	url = {https://www.beatunes.com},
+	author = {Beatunes},
+	year = {2017}
+}
