--- a/latex/acousticbrainz-genre-task-me17.tex
+++ b/latex/acousticbrainz-genre-task-me17.tex
@@ -59,7 +59,7 @@
 
 
 \begin{document}
-\title{The MediaEval 2017 AcousticBrainz Genre Task: Content-based music genre recognition from multiple sources}
+\title{The MediaEval 2017 AcousticBrainz Genre Task:\\Content-based Music Genre Recognition from Multiple Sources}
 %\titlenote{Produces the permission block, and
 %  copyright information}
 %\subtitle{Extended Abstract}
@@ -70,7 +70,7 @@
 %%If you want to use multi-column authors that's fine. Comment out the next lines, and then uncomment below.
 \author{Dmitry Bogdanov\textsuperscript{1}, Alastair Porter\textsuperscript{1}, Julián Urbano\textsuperscript{2}, Hendrik Schreiber\textsuperscript{3}}
 \affiliation{\textsuperscript{1}Music Technology Group, Universitat Pompeu Fabra, Spain\\ \textsuperscript{2}Multimedia Computing Group, Delft University of Technology, Netherlands \\ \textsuperscript{3}tagtraum industries incorporated\\ }
-\email{dmitry.bogdanov@upf.edu, alastair.porter@upf.edu, j.urbano@tudelft.nl, hs@tagtraum.com}
+\email{dmitry.bogdanov@upf.edu, alastair.porter@upf.edu, urbano.julian@gmail.com, hs@tagtraum.com}
 
 %\author{G.K.M. Tobin}
 %%\authornote{The secretary disavows any knowledge of this author's actions.}
@@ -165,26 +165,25 @@ ground-truth information and datasets, and the evaluation methodology.
 
 \maketitle
 
-\section{Introduction}  Content-based music genre recognition is a popular task
-within the Music Information Retrieval (MIR)
-community~\cite{sturm2013classification}. The goal is to build systems that are
-able to predict genre and subgenre of unknown music recordings (tracks or songs)
+\section{Introduction}
+
+Content-based music genre recognition is a popular task
+in Music Information Retrieval research~\cite{Sturm2014state}. The goal is to build systems able to predict genre and subgenre of unknown music recordings (tracks or songs)
 using music features of those recordings automatically computed from audio.
 %Achieving success in the task therefore relies on building efficient machine
 %learning and audio signal processing algorithms.
-\hl{Although this task is commonly addressed in the MIR research, we realize that it
-is often oversimplified while it should be considered in more complexity
-resembling real-world use cases.} 
+%\hl{Although this task is commonly addressed in the MIR research, we realize that it is often oversimplified while it should be considered in more complexity resembling real-world use cases.} 
 %In particular, 
 Such research can be supported
 by our recent developments in the context of the
-AcousticBrainz\footnote{\url{https://acousticbrainz.org}} project facilitating
+AcousticBrainz~\cite{acousticbrainz} %\footnote{\url{https://acousticbrainz.org}}
+project, which facilitates
 access to large datasets of music features~\cite{porter2015acousticbrainz} and
 metadata~\cite{porter2016mining}. AcousticBrainz is a community database
 containing music features extracted from audio files. Users who contribute to the
-project run software on their computers to analyze their personal audio
-collections and submit the analysis to the AcousticBrainz database.
-Based on the music features, additional
+project run software on their computers to process their personal audio
+collections and submit music features to the AcousticBrainz database.
+Based on these features, additional
 metadata including genres can then be mined for recordings in the database.
 
 We propose a new genre recognition task using datasets based on AcousticBrainz
@@ -192,31 +191,30 @@ for MediaEval 2017. This task is different from a typical genre recognition task
 in the following:
 
 \begin{itemize}
-
-\item We want
-to explore how the same music can be annotated differently by different
-communities following different genre taxonomies, and how this should be
-addressed by genre recognition systems.
-
-\item Typically, research is done on a small number of broad genre categories.
-In contrast, we propose to consider more specific genres and subgenres. Our
-data contains hundreds of subgenres.
+\item It allows to explore how the same music can be annotated differently by different
+communities who follow different genre taxonomies, and how this can be
+addressed when developing and evaluating genre recognition systems.
 
 \item Genre recognition is often treated as a single category classification
 problem. %, which is not necessarily the way it should be. O
-Our genre data is
-intrinsically multi-label. Therefore we propose to treat genre recognition as a
+Our data is
+intrinsically multi-label, so we propose to treat genre recognition as a
 multi-label classification problem.
 
-\item Often research is done on small music collections. Instead, we
-provide a very large dataset counting two million recordings annotated with genres
+\item Previous research typically used a small number of broad genre categories.
+In contrast, we propose to consider more specific genres and subgenres. Our
+data contains hundreds of subgenres.
+
+\item We provide information about the hierarchy of genres and
+subgenres within each annotation source. Systems can take advantage of
+this knowledge.
+
+\item MIR research is often done on small music collections. Instead, we
+provide a very large dataset with two million recordings annotated with genres
 and subgenres. The downside is that we are not able to provide audio, but only
 precomputed %bags of 
 features.
 
-\item Finally, we provide information about the hierarchy of genres and
-subgenres within each genre annotation source. Systems can take advantage of
-this knowledge.
 
 \end{itemize} 
 
@@ -229,40 +227,40 @@ this knowledge.
 \section{Task Description} 
 
 The task invites participants to predict genre and subgenre of unknown music
-recordings (tracks) given automatically computed music features of those recordings.
-We provide a training set of such music features taken from the AcousticBrainz
+recordings given automatically computed music features of those recordings.
+We provide four datasets of such music features taken from the AcousticBrainz
 database~\cite{porter2015acousticbrainz} together with four different ground
-truths of genre and subgenre labels. These ground truths were created using
+truths created using
 four different music metadata websites as sources. Their genre taxonomies vary in
 class spaces, specificity and breadth. Each source has its own definition for
 its genre labels, i.e.\ the same label may carry a different meaning when used
 by another source.
-Importantly, annotations in each source are multi-label: there may be multiple genre and
+Most importantly, annotations in each source are multi-label: there may be multiple genre and
 subgenre annotations for the same music recording. It is guaranteed that each
 recording has at least one genre label, while subgenres are not always present.
 
 
-Participants must train model(s) using this data and then predict
-genre and subgenre labels for a test set
+Participants must train model(s) using the provided development sets and then predict
+genre and subgenre labels for the test sets.
 %We provide a dataset (a training and test set) for every genre ground truth.
 %In total, participants are given four training datasets and all proposed
 %models are evaluated on four test datasets. 
 %The goal is to create a system that
 %uses provided music features as an input and predicts genre and subgenre labels,
-using the genre taxonomy of each ground truth. The task includes two subtasks:
+%using the genre taxonomy of each ground truth.
+The task includes two subtasks:
 
 \begin{itemize}
 
 \item \textbf{Subtask 1: Single-source Classification}. This subtask explores
-conventional systems, each one trained on a single dataset. Participants will
-submit predictions for the test set of each dataset separately, using their
+conventional systems, each one trained on a single dataset. Participants submit predictions for the test set of each dataset separately, using their
 respective class spaces (genres and subgenres). These predictions will be
 produced by a separate system for each dataset, that has been trained without any information
 from the other sources. This subtask will serve as a baseline for Subtask 2.
 
 \item \textbf{Subtask 2: Multi-source Classification}. This subtask explores
 how to combine several ground-truth sources to create a classification system.
-We will use the same four test sets. Participants will submit predictions for
+We will use the same four test sets. Participants submit predictions for
 each test set separately, again following each corresponding genre class space.
 These predictions may be produced by a single system for all datasets or by one
 system for each dataset. Participants are free to make their own decision about
@@ -287,29 +285,32 @@ how to combine the training data from all sources.
 \subsection{Genre Annotations}
 
 We provide four datasets containing genre and subgenre annotations extracted
-from four different online metadata sources:
-\footnote{
+from four different online metadata sources: 
+
+\begin{itemize}
+
+\item \textbf{AllMusic}~\cite{allmusic} %\footnote{\url{https://allmusic.com}}
+and \textbf{Discogs}~\cite{discogs} %\footnote{\url{https://discogs.com}}
+are based on editorial metadata databases maintained by music experts and enthusiasts. These sources contain explicit genre/subgenre annotations of music releases (albums) following a predefined genre taxonomy. To build the datasets we assumed that release-level annotations
+correspond to those for recordings in AcousticBrainz.
+
+\item \textbf{Lastfm}~\cite{lastfm} %\footnote{\url{https://last.fm}}
+is based on a collaborative music tagging platform with large amounts of genre labels provided by its users for music recordings.
+\textbf{Tagtraum}~\cite{tagtraum} %\footnote{\url{http://www.tagtraum.com}}
+is similarly based on genre labels 
+collected from users of the music tagging application beaTunes~\cite{beatunes}. %\footnote{\url{https://www.beatunes.com}}
+We have automatically inferred a genre/subgenre taxonomy and annotations from these labels following the algorithm proposed in~\cite{schreiber_improving_2015} and a manual post-processing.
+
+\end{itemize}
+We provide information about genre/subgenre tree hierarchies for every ground
+truth.\footnote{
 The resulting genre metadata is licensed under CC BY-NC-SA4.0
 license, except
 for data extracted from the AllMusic database which is released for 
 non-commercial scientific research purposes only. Any publication of results based
 on the data extracts of the AllMusic database must cite AllMusic as the source
 of the data.
-}  
-
-\begin{itemize}
-
-\item \textbf{AllMusic}\footnote{\url{https://allmusic.com}} and \textbf{Discogs}\footnote{\url{https://discogs.com}} are based on editorial metadata databases maintained by music experts and enthusiasts. These sources contain explicit genre/subgenre annotations of music releases (albums) following a predefined genre namespace and taxonomy. To build the datasets we assumed that release-level annotations
-from AllMusic and Discogs correspond to those for recordings (tracks) in AcousticBrainz.
-
-\item \textbf{Lastfm}\footnote{\url{https://last.fm}} is based on a collaborative music tagging platform with large amounts of genre labels provided by its users for music recordings (tracks).
-\textbf{Tagtraum}\footnote{\url{http://www.tagtraum.com}} is similarly based on genre labels 
-collected from users of the music tagging application beaTunes.\footnote{\url{https://www.beatunes.com}}
-We have automatically inferred a genre/subgenre taxonomy and annotations from these labels following the algorithm proposed in~\cite{schreiber_improving_2015} and a manual post-processing.
-
-\end{itemize}
-We provide information about genre/subgenre tree hierarchies for every ground
-truth. 
+} 
 %The resulting genre metadata is licensed under CC BY-NC-SA4.0
 %license,\footnote{ %Creative Commons Attribution-NonCommercial-ShareAlike 4.0
 %International, \url{https://creativecommons.org/licenses/by-nc-sa/4.0/}} except
@@ -333,32 +334,52 @@ frame-level data is available.
 
 \subsection{Development and Test Datasets}  
 
-In total we provide four development (training) and four test datasets associated with the
+In total we provide four development (training+validation) and four test datasets associated with the
 four genre ground truths. They were created by a random split of 
 the full data ensuring that:
 \begin{itemize}
-\item no recordings from test sets are also present in any of the development sets;
-\item no recordings from test sets are from the same release groups (e.g., albums, singles, EPs) as the development sets; 
+\item no recordings in the test sets are present in any of the development sets;
+\item no recordings in the test sets are from the same release groups (e.g., albums, singles, EPs) present in the development sets; 
 \item the same genre and subgenre labels are present in both development and test sets for each ground truth;
 \item genre and subgenre labels are represented by at least 40 and 20 recordings from 6 and 3 release groups in development and test sets, respectively.
 \end{itemize}
-The approximate split ratio is 70\% to 15\% of the total number of recordings
-(another 15\% were reserved for further evaluation purposes).
+
+\begin{table}[t]
+  \caption{Overview of the development datasets.}
+  \label{table:train_stats}
+  {\small\begin{tabular}{lcccc}
+  \toprule
+    Dataset & AllMusic & Discogs & Lastfm & Tagtraum \\
+  \midrule
+    Type & Explicit & Explicit & Tags & Tags \\
+    Annotation level & Release & Release & Track & Track \\
+  \midrule
+    Recordings & 1,353,213 & 904,944 & 566,710 & 486,740 \\
+    Release groups & 163,654 & 118,475 & 115,161 & 69,025 \\
+  \midrule
+    Genres & 21 & 15 & 30 & 31 \\
+    Subgenres & 745 & 300 & 297 & 265 \\
+    Genres/track & 1.33 & 1.37 & 1.14 & 1.13 \\
+    Subgenres/track & 3.15 & 1.69 & 1.28 & 1.72 \\
+  \bottomrule
+\end{tabular}}
+\end{table}
+
+The approximate split ratios are 70\% for training and 15\% for testing (another 15\% was reserved for future evaluation purposes).
 Table~\ref{table:train_stats} provides an overview of the resulting development
-sets. Genre/subgenre taxonomy and their distribution in the development sets in terms of number of recordings and
+sets. Details on the genre/subgenre taxonomy and their distribution in the development sets in terms of number of recordings and
 release groups %for all four training sets 
 are reported online.\footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-Genre-Task/data_stats/}} 
-Recordings are partially intersected in all four
-development sets as well as in the test sets. The full intersection of all
-development sets (recordings annotated by all four ground truths) contains 247,716 recordings while the intersection of the two
+Recordings are partially intersected (annotated by all four ground truths) in the development and test sets. The full intersection of all
+development sets contains 247,716 recording, while the intersection of the two
 largest %development 
 sets, AllMusic and Discogs, contains 831,744 recordings.
 
-The details on the format of all distributed data are available
+All data are published in JSON format; details about format are available
 online.\footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-Genre-Task/data/}} 
 Each recording in the development sets is
 identified by a %recording 
-MusicBrainz identifier (MBID).\footnote{\url{https://musicbrainz.org/doc/MusicBrainz_Identifier}} 
+MusicBrainz identifier (MBID)\footnote{\url{https://musicbrainz.org/doc/MusicBrainz_Identifier}}, which can be used by participants to gather related data. 
 %All identifiers in the test datasets are anonymized for evaluation purposes.
 Importantly, our split allows to avoid the ``album
 effect''~\cite{flexer2009album}, which leads to a potential overestimation of
@@ -372,6 +393,7 @@ include information about release groups of each recording,
 %(release group MBID)
 which may be useful for participants in order to avoid this effect when
 developing their systems.
+Partitioning scripts were provided to create training-validation splits ensuring these characteristics in the data.
 
 %The development datasets additionally include information about release groups
 %to which the recordings belong (release group MBID). This information may be
@@ -383,39 +405,20 @@ developing their systems.
 %approximate split ratio is 70\% to 15\% (another 15\% are reserved for further
 %evaluation purposes).
 
-\begin{table}
-  \caption{Overview of the development datasets}
-  \label{table:train_stats}
-  \begin{tabular}{lcccc}
-  \toprule
-    Dataset & AllMusic & Discogs & Lastfm & Tagtraum \\
-  \midrule
-    Type & Explicit & Explicit & Tags & Tags \\
-    Annotation level & Release & Release & Track & Track \\
-  \midrule
-    Tracks (recordings) & 1,353,213 & 904,944 & 566,710 & 486,740 \\
-    Release groups & 163,654 & 118,475 & 115,161 & 69,025 \\
-  \midrule
-    Genres & 21 & 15 & 30 & 31 \\
-    Subgenres & 745 & 300 & 297 & 265 \\
-    Genres/track & 1.33 & 1.37 & 1.14 & 1.13 \\
-    Subgenres/track & 3.15 & 1.69 & 1.28 & 1.72 \\
-  \bottomrule
-\end{tabular}
-\end{table}
 
 \section{Submissions and Evaluation}
 
-Participants are expected to submit predictions for both subtasks. If they only
-want to work on the first subtask, they should submit the same predictions for
-the second subtask. We allow only five evaluation runs (each run includes both
-subtasks). Participants should report whether they used the whole development
+Participants are expected to submit predictions for both subtasks. %If they only
+%want to work on the first subtask, they should submit the same predictions for
+%the second subtask.
+We allow a maximum of five evaluation runs, each including both
+subtasks, and reporting whether they used the whole development
 dataset or only parts for every submission.
 
 %\section{Evaluation Methodology}
 
-The evaluation is carried out for each dataset separately. In particular, we
-compute precision, recall and F-score as follows:
+The evaluation is carried out for each dataset separately. We do not use hierarchical measures because the hierarchies in the Lastfm and Tagtraum datasets are not explicit. Instead, we
+compute precision, recall and F-score at different levels:
 
 \begin{itemize}
 \item Per recording, all labels.
@@ -427,12 +430,11 @@ compute precision, recall and F-score as follows:
 \end{itemize}
 
 The ground truth does not necessarily contain subgenre annotations for some
-recordings. Therefore, only recordings containing subgenres are considered for
-the evaluation on the subgenre level. An example can be found online in the
-summaries of random
-baselines.
+recordings, so we only considered recordings containing subgenres for
+the evaluation at the subgenre level. An example can be found online in the
+summaries of random baselines.
 \footnote{\url{https://multimediaeval.github.io/2017-AcousticBrainz-Genre-Task/baseline/}} 
-We provide evaluation scripts for development purposes.\footnote{Accessible to registered participants.}
+We also provided evaluation scripts for development purposes.
 
 \section{Conclusions}
 Bringing the AcousticBrainz Genre Task to MediaEval we hope to benefit from
