Made ISMIR citations uniform. Removed superfluous fullstop in essentia reference. Added some page numbers. Added some addresses. Fixed capitalization in AcousticBrainz and beaTunes references.

--- a/latex/acousticbrainz-genre-task-me17.bib
+++ b/latex/acousticbrainz-genre-task-me17.bib
@@ -1,86 +1,106 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Hendrik Schreiber at 2017-08-18 14:48:57 +0200 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
 @inproceedings{schreiber_improving_2015,
-  title = {Improving genre annotations for the {Million} {Song} {Dataset}},
-  urldate = {2016-04-11},
-  booktitle = {International {Society} for {Music} {Information} {Retrieval} {Conference} ({ISMIR}'15)},
-  author = {Schreiber, H.},
-  year = {2015},
-  keywords = {AcousticBrainz papers, genre classification, genre dataset, genre taxonomy, ground truth agreement}
-}
+	Address = {M{\'a}laga, Spain},
+	Author = {Schreiber, H.},
+	Booktitle = {International Society for Music Information Retrieval (ISMIR'15) Conference},
+	Date-Modified = {2017-08-18 12:47:36 +0000},
+	Keywords = {AcousticBrainz papers, genre classification, genre dataset, genre taxonomy, ground truth agreement},
+	Pages = {241--247},
+	Title = {Improving genre annotations for the {Million} {Song} {Dataset}},
+	Urldate = {2016-04-11},
+	Year = {2015}}
 
 @inproceedings{porter2015acousticbrainz,
-  title={AcousticBrainz: a community platform for gathering music information obtained from audio},
-  author={Alastair Porter and Dmitry Bogdanov and Robert Kaye and Roman Tsukanov and Serra, Xavier},
-  year = {2015},
-  booktitle = {International Society for Music Information Retrieval (ISMIR'15) Conference},
-}
+	Address = {M{\'a}laga, Spain},
+	Author = {Alastair Porter and Dmitry Bogdanov and Robert Kaye and Roman Tsukanov and Serra, Xavier},
+	Booktitle = {International Society for Music Information Retrieval (ISMIR'15) Conference},
+	Date-Modified = {2017-08-18 12:47:31 +0000},
+	Pages = {786--792},
+	Title = {AcousticBrainz: a community platform for gathering music information obtained from audio},
+	Year = {2015}}
 
 @inproceedings{bogdanov2013essentia,
-  title={Essentia: An Audio Analysis Library for Music Information Retrieval.},
-  author={Bogdanov, D. and Wack, N. and G{\'o}mez, E. and Gulati, S. and Herrera, P. and Mayor, O. and Roma, G. and Salamon, J. and Zapata, J.R. and Serra, X.},
-  booktitle = {International Society for Music Information Retrieval (ISMIR'13) Conference},
-  pages={493--498},
-  year={2013}
-}
+	Address = {Curitiba, Brazil},
+	Author = {Bogdanov, D. and Wack, N. and G{\'o}mez, E. and Gulati, S. and Herrera, P. and Mayor, O. and Roma, G. and Salamon, J. and Zapata, J.R. and Serra, X.},
+	Booktitle = {International Society for Music Information Retrieval (ISMIR'13) Conference},
+	Date-Modified = {2017-08-18 12:48:14 +0000},
+	Pages = {493--498},
+	Title = {Essentia: An Audio Analysis Library for Music Information Retrieval},
+	Year = {2013}}
 
 @inproceedings{porter2016mining,
-  title={Mining metadata from the web for {A}coustic{B}rainz},
-  author={Porter, A. and Bogdanov, D. and Serra, X.},
-  booktitle={International workshop on Digital Libraries for Musicology (DLfM'16)},
-  pages={53--56},
-  year={2016},
-  organization={ACM}
-}
+	Author = {Porter, A. and Bogdanov, D. and Serra, X.},
+	Booktitle = {International workshop on Digital Libraries for Musicology (DLfM'16)},
+	Organization = {ACM},
+	Pages = {53--56},
+	Title = {Mining metadata from the web for {A}coustic{B}rainz},
+	Year = {2016}}
 
 @inproceedings{flexer2009album,
-  title={ Album and Artist Effects for Audio Similarity at the Scale of the {W}eb},
-  author={Flexer, A. and Schnitzer, D.},
-  booktitle={Sound and Music Computing Conference (SMC'09)},
-  year={2009},
-}
+	Author = {Flexer, A. and Schnitzer, D.},
+	Booktitle = {Sound and Music Computing Conference (SMC'09)},
+	Title = {Album and Artist Effects for Audio Similarity at the Scale of the {W}eb},
+	Year = {2009}}
 
 @article{sturm2013classification,
-  title={Classification accuracy is not enough: On the evaluation of music genre recognition systems},
-  author={Sturm, Bob L},
-  journal={Journal of Intelligent Information Systems},
-  year={2013}
-}
+	Author = {Sturm, Bob L},
+	Journal = {Journal of Intelligent Information Systems},
+	Title = {Classification accuracy is not enough: On the evaluation of music genre recognition systems},
+	Year = {2013}}
+
 @article{Sturm2014state,
-author = {Sturm, Bob L.},
-journal = {Journal of New Music Research},
-number = {2},
-pages = {147--172},
-title = {{The State of the Art Ten Years After a State of the Art: Future Research in Music Information Retrieval}},
-volume = {43},
-year = {2014}
-}
+	Author = {Sturm, Bob L.},
+	Journal = {Journal of New Music Research},
+	Number = {2},
+	Pages = {147--172},
+	Title = {{The State of the Art Ten Years After a State of the Art: Future Research in Music Information Retrieval}},
+	Volume = {43},
+	Year = {2014}}
 
 @misc{acousticbrainz,
-  url = {https://acousticbrainz.org},
-  author = {Acousticbrainz},
-  year = {2017}
-}
+	Author = {AcousticBrainz},
+	Date-Modified = {2017-08-18 12:48:57 +0000},
+	Url = {https://acousticbrainz.org},
+	Year = {2017},
+	Bdsk-Url-1 = {https://acousticbrainz.org}}
+
 @misc{allmusic,
-	url = {https://allmusic.com},
-	author = {AllMusic},
-	year = {2017}
-}
+	Author = {AllMusic},
+	Url = {https://allmusic.com},
+	Year = {2017},
+	Bdsk-Url-1 = {https://allmusic.com}}
+
 @misc{discogs,
-	url = {https://discogs.com},
-	author = {Discogs},
-	year = {2017}
-}
+	Author = {Discogs},
+	Url = {https://discogs.com},
+	Year = {2017},
+	Bdsk-Url-1 = {https://discogs.com}}
+
 @misc{lastfm,
-	url = {https://last.fm},
-	author = {Lastfm},
-	year = {2017}
-}
+	Author = {Lastfm},
+	Url = {https://last.fm},
+	Year = {2017},
+	Bdsk-Url-1 = {https://last.fm}}
+
 @misc{tagtraum,
-	url = {http://www.tagtraum.com},
-	author = {Tagtraum},
-	year = {2017}
-}
+	Author = {Tagtraum},
+	Url = {http://www.tagtraum.com},
+	Year = {2017},
+	Bdsk-Url-1 = {http://www.tagtraum.com}}
+
 @mis{beatunes,
-	url = {https://www.beatunes.com},
-	author = {Beatunes},
-	year = {2017}
-}
+	Author = {beaTunes},
+	Date-Modified = {2017-08-18 12:48:29 +0000},
+	Url = {https://www.beatunes.com},
+	Year = {2017},
+	Bdsk-Url-1 = {https://www.beatunes.com}}
