Small grammar updates

--- a/latex/acousticbrainz-genre-task-me17.bib
+++ b/latex/acousticbrainz-genre-task-me17.bib
@@ -2,10 +2,10 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Hendrik Schreiber at 2017-08-18 14:48:57 +0200 
+%% Created for Hendrik Schreiber at 2017-08-18 14:48:57 +0200
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
 
@@ -22,7 +22,7 @@
 
 @inproceedings{porter2015acousticbrainz,
 	Address = {M{\'a}laga, Spain},
-	Author = {Alastair Porter and Dmitry Bogdanov and Robert Kaye and Roman Tsukanov and Serra, Xavier},
+	Author = {Porter, A and Bogdanov, D and Kaye, R and Tsukanov, R and Serra, X},
 	Booktitle = {International Society for Music Information Retrieval (ISMIR'15) Conference},
 	Date-Modified = {2017-08-18 12:47:31 +0000},
 	Pages = {786--792},
@@ -53,13 +53,13 @@
 	Year = {2009}}
 
 @article{sturm2013classification,
-	Author = {Sturm, Bob L},
+	Author = {Sturm, B. L.},
 	Journal = {Journal of Intelligent Information Systems},
 	Title = {Classification accuracy is not enough: On the evaluation of music genre recognition systems},
 	Year = {2013}}
 
 @article{Sturm2014state,
-	Author = {Sturm, Bob L.},
+	Author = {Sturm, B. L.},
 	Journal = {Journal of New Music Research},
 	Number = {2},
 	Pages = {147--172},
