Back to 2 pages.

--- a/latex/acousticbrainz-genre-task-me17.tex
+++ b/latex/acousticbrainz-genre-task-me17.tex
@@ -256,8 +256,8 @@ produced by a separate system for each dataset, that has been trained without an
 from the other sources. This subtask will serve as a baseline for Subtask 2.
 
 \item \textbf{Subtask 2: Multi-source Classification}. This subtask explores
-how to combine several ground-truth sources to create a single classification system.
-We will use the same four test sets. Participants submit predictions for
+the combination of several ground-truth sources to create a single classification system.
+We use the same four test sets. Participants submit predictions for
 each test set separately, again following each corresponding genre class space.
 These predictions may be produced by a single system for all datasets or by one
 system for each dataset. Participants are free to make their own decision about
