Final polish of the Task Overview paper
Following Martha's comments

--- a/latex/acousticbrainz-genre-task-me17.tex
+++ b/latex/acousticbrainz-genre-task-me17.tex
@@ -19,6 +19,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{soul}
 \hyphenation{Media-Eval}
+\hyphenation{Acoustic-Brainz}
 
 %\renewcommand*{\UrlFont}{\ttfamily\smaller\relax}
 
@@ -230,7 +231,7 @@ database~\cite{porter2015acousticbrainz} together with four different ground
 truths created using
 four different music metadata websites as sources. Their genre taxonomies vary in
 class spaces, specificity and breadth. Each source has its own definition for
-its genre labels, i.e.\ the same label may carry a different meaning when used
+its genre labels, i.e., the same label may carry a different meaning when used
 by another source.
 Most importantly, annotations in each source are multi-label: there may be multiple genre and
 subgenre annotations for the same music recording. It is guaranteed that each
@@ -252,7 +253,7 @@ The task includes two subtasks:
 \item \textbf{Subtask 1: Single-source Classification}. This subtask explores
 conventional systems, each one trained on a single dataset. Participants submit predictions for the test set of each dataset separately, using their
 respective class spaces (genres and subgenres). These predictions will be
-produced by a separate system for each dataset, that has been trained without any information
+produced by a separate system for each dataset, trained without any information
 from the other sources. This subtask will serve as a baseline for Subtask 2.
 
 \item \textbf{Subtask 2: Multi-source Classification}. This subtask explores
@@ -303,7 +304,7 @@ We provide information about genre/subgenre tree hierarchies for every ground
 truth.\footnote{
 The resulting genre metadata is licensed under CC BY-NC-SA4.0
 license, except
-for data extracted from the AllMusic database which is released for
+for data extracted from the AllMusic database, which is released for
 non-commercial scientific research purposes only. Any publication of results based
 on the data extracts of the AllMusic database must cite AllMusic as the source
 of the data.
